@@ -1,3 +1,7 @@
+2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b96
+
+	* Change: Created new layout Block adminAlbumCommands.
+
 2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b95
 
 	* Added new Wooden frame.  Contributed by stormfrog.
